objects/ssot__ProgramEnrollment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationDate__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramEnrolleeId__c</fullName>
        <label>Care Program Enrollee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentMonthDisbCount__c</fullName>
        <label>Current Month Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearDisbCount__c</fullName>
        <label>Current Year Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Program Enrollment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAnonymous__c</fullName>
        <label>Is Anonymous</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousMonthDisbCount__c</fullName>
        <label>Previous Month Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousYearDisbCount__c</fullName>
        <label>Previous Year Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramEnrollmentStatus__c</fullName>
        <label>Program Enrollment Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668770826_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramEnrollment_ProgramId_map_Prog_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>ProgramEnrollment_ProgramId_map_Prog_rel</relationshipLabel>
        <relationshipName>rel_1716668770826_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668776073_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramEnrollment_AccountId_map_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ProgramEnrollment_AccountId_map_Acco_rel</relationshipLabel>
        <relationshipName>rel_1716668776073_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544759528_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramEnrollment_AccountContactId_m_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>ProgramEnrollment_AccountContactId_m_rel</relationshipLabel>
        <relationshipName>rel_1718544759528_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>